--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Atividades front end I</title>
 </head>
 <body>
-    <a href="/aula-14/index.html">Aula 14</a>
+    <nav>
+        <li>
+            <a href="./aula-14/index.html">Aula 14</a>
+        </li>
+    </nav>
 </body>
 </html>
