--- a/aula-14/index.html
+++ b/aula-14/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <header>
-        <div class="discount-bar">Descontos de 20%</div>
-        <div class="title-bar">Card Super Heróis</div>
+        <div class="discount-bar">
+            <span>Descontos de 20%</span>
+        </div>
+        <div class="title-bar">
+            <span>Card Super Heróis</span>
+        </div>
     </header>
     <main>
         <section class="main-section">
