adding aula 15 to the global index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <li>
             <a href="./aula-14/index.html">Aula 14</a>
+            <a href="./aula-15/index.html">Aula 15</a>
         </li>
     </nav>
 </body>
